# JHUWebCrawl

./: .gitignore  README.md  crawled_report.csv  distributed_pyproject.toml  myfile.txt  pyproject.toml  results.sqlite3
crawler_env/: pyvenv.cfg
crawler_env/Scripts/: activate  activate.bat
src/crawler/: crawler.py  distributed_crawler.py  robots.py  view_sqlite3.py  web_crawler.py
src/ml/: adaptive_model.py  classifier.py  similarities.py
src/model/: context.py
src/models/: similarities.py  topVals.py
